# N32G430C8

./: .gitignore  CMakeLists.txt  Kconfig  N32G430 Version history.txt  builddm.bat  project.build
.github/workflows/: ci.yml
CMSIS/: CMakeLists.txt
CMSIS/device/: n32g430.h  system_n32g430.c
CMSIS/device/startup/: startup_n32g430_gcc.s
n32g430_std_periph_driver/: CMakeLists.txt
n32g430_std_periph_driver/src/: n32g430_adc.c  n32g430_comp.c  n32g430_flash.c  n32g430_rcc.c
quectel/: Makefile
quectel/QEM25FANA/: CMakeLists.txt  Makefile  main.c  proj.conf
quectel/QEM25FANA/bsp/: Kconfig
quectel/QEM25FANA/bsp/inc/: bsp.h  bsp_adc.h  bsp_iwdg.h  bsp_uart.h  control.h  led.h
quectel/QEM25FANA/bsp/src/: bsp_adc.c  bsp_iwdg.c  bsp_uart.c  control.c  led.c  log.c  n32g430_it.c
quectel/QEM25FANA/task/: CMakeLists.txt  Kconfig
quectel/QEM25FANA/task/inc/: task.h
quectel/QEM25FANA/task/src/: task.c
quectel/QEM25FANA/utils/: CMakeLists.txt  Kconfig
quectel/QEM25FANA/utils/ring_buffer/: ring_buffer.c  ring_buffer.h
quectel/app/: CMakeLists.txt  Makefile  main.c
quectel/app/bsp/: CMakeLists.txt
quectel/app/bsp/inc/: bsp_delay.h  bsp_led.h  log.h
quectel/app/bsp/src/: bsp_delay.c  bsp_led.c  log.c  n32g430_it.c  print_remap.c
quectel_build/config/: n32g430_flash.ld
quectel_build/scripts/: compiler_flags.cmake  extension.cmake  quec_n32g430_sdk-config.cmake
quectel_build/scripts/cmake_toolchain_files/: armgcc.cmake
quectel_build/tools/kconfig/: genconfig.py
quectel_build/tools/python-3.7.6rc1-embed-amd64/Scripts/: bin2hex.py  hex2bin.py  hex2dump.py  hexdiff.py  hexinfo.py  hexmerge.py
